new proj/src/objects/GE_AL_Equipment_Data__c.object
<CustomObject>
    <fields>
        <fullName>GE_AL_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Equipment Data</relationshipLabel>
        <relationshipName>Equipment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Low_Trip_01__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Intake PSI/KPA</inlineHelpText>
        <label>Low Trip (1)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Low_Trip_02__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Discharge PSI/kPA</inlineHelpText>
        <label>Low Trip (2)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Low_Trip_03__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Tank Level (ft)</inlineHelpText>
        <label>Low Trip (3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Lower_PigTail_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lower PigTail Serial #</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Lower PigTail Serial #)</relationshipLabel>
        <relationshipName>Equipment_DataFDJc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_M1_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>M1 - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_M1_2X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>M1 - 2X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_M1_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>M1 - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_M2_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>M2 - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_M2_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>M2 - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_M3_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>M3 - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_MLC_Condition__c</fullName>
        <label>MLC Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_MLC_Length__c</fullName>
        <label>MLC Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_MLC_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MLC Serial #</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (MLC Serial #)</relationshipLabel>
        <relationshipName>Equipment_DataFDJS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Mandrel_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandrel Serial #</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Mandrel Serial #)</relationshipLabel>
        <relationshipName>Equipment_DataFDJw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Max_Hz__c</fullName>
        <label>Max Hz</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Min_Hz__c</fullName>
        <label>Min Hz</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_B_1__c</fullName>
        <label>Motor A-B (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_B_2__c</fullName>
        <label>Motor A-B (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_B_3__c</fullName>
        <label>Motor A-B (3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_C_1__c</fullName>
        <label>Motor A-C (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_C_2__c</fullName>
        <label>Motor A-C (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_C_3__c</fullName>
        <label>Motor A-C (3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_GRND_1__c</fullName>
        <label>Motor A-GRND (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_GRND_2__c</fullName>
        <label>Motor A-GRND (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_A_GRND_3__c</fullName>
        <label>Motor A-GRND (3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Alignment_Readings_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Alignment Readings (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Alignment_Readings_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Alignment Readings (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Alignment_Readings_C__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Alignment Readings (C)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Assembly_A_B__c</fullName>
        <label>Motor Assembly A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Assembly_A_C__c</fullName>
        <label>Motor Assembly A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Assembly_A_GRND__c</fullName>
        <label>Motor Assembly A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Assembly_B_C__c</fullName>
        <label>Motor Assembly B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Assembly_B_GRND__c</fullName>
        <label>Motor Assembly B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Assembly_C_GRND__c</fullName>
        <label>Motor Assembly C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_B_C_1__c</fullName>
        <label>Motor B-C (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_B_C_2__c</fullName>
        <label>Motor B-C (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_B_C_3__c</fullName>
        <label>Motor B-C (3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_B_GRND_1__c</fullName>
        <label>Motor B-GRND (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_B_GRND_2__c</fullName>
        <label>Motor B-GRND (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_B_GRND_3__c</fullName>
        <label>Motor B-GRND (3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_C_GRND_1__c</fullName>
        <label>Motor C-GRND (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_C_GRND_2__c</fullName>
        <label>Motor C-GRND (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_C_GRND_3__c</fullName>
        <label>Motor C-GRND (3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Comments__c</fullName>
        <label>Motor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Condition__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Condition</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Controller_Type__c</fullName>
        <label>Motor Controller Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Coupling_Condition__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Coupling Condition</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Coupling_Grease_Type__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Coupling Grease Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Coupling_Qty__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Coupling Qty</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Coupling_Serviced__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Coupling Serviced</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Grease_Type__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Grease Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_HP__c</fullName>
        <label>Motor HP</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Qty__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Qty</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Serial_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motor Serial # (1)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Motor Serial # (1))</relationshipLabel>
        <relationshipName>Equipment_DataFDIU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Serial_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motor Serial # (2)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Motor Serial # (2))</relationshipLabel>
        <relationshipName>Equipment_DataFDIe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Serial_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motor Serial # (3)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Motor Serial # (3))</relationshipLabel>
        <relationshipName>Equipment_DataFDIo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Serial_Number__c</fullName>
        <label>Motor Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Serviced__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Serviced</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Setting_Depth_ft__c</fullName>
        <label>Motor Setting Depth (ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Settle_Amps__c</fullName>
        <label>Motor Settle Amps</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Shroud_Material_1__c</fullName>
        <label>Motor Shroud/Material (1)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Shroud_Material_2__c</fullName>
        <label>Motor Shroud/Material (2)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Startup_Amps__c</fullName>
        <label>Motor Startup Amps</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Temperature__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Motor Temperature</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Test_Date__c</fullName>
        <label>Motor Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Test_ID__c</fullName>
        <label>Motor Test ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Test_Time__c</fullName>
        <label>Motor Test Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Mtr_Nameplate__c</fullName>
        <label>Mtr Nameplate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Mtr_Setting__c</fullName>
        <label>Mtr. Setting</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Mtr_Temp_Kill__c</fullName>
        <label>Mtr. Temp Kill</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Mtr_Temperature__c</fullName>
        <label>Mtr. Temperature</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_NE_Corner__c</fullName>
        <label>NE Corner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_NW_Corner__c</fullName>
        <label>NW Corner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_New_Used_1__c</fullName>
        <label>New/Used (1)</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_New_Used_2__c</fullName>
        <label>New/Used (2)</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_New_Used_3__c</fullName>
        <label>New/Used (3)</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_New_Used_No_Splices__c</fullName>
        <label>New/Used (No. Splices)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_Voltage_P_G__c</fullName>
        <label>No-Load Voltage P-G</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_Voltage_P_P__c</fullName>
        <label>No-Load Voltage P-P</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_OL_Setting__c</fullName>
        <label>OL Setting</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oil_BPD__c</fullName>
        <label>Oil BPD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oil_Contamanents_Motor_1__c</fullName>
        <label>Oil Contamanents (Motor 1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oil_Contamanents_Motor_2__c</fullName>
        <label>Oil Contamanents (Motor 2)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oil_Contamanents_Motor_3__c</fullName>
        <label>Oil Contamanents (Motor 3)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oil_Type__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Oil Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oil__c</fullName>
        <label>Oil</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Oils_Seals_Replaced_Front__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Oils Seals Replaced Front</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Operating_DH_Pressure__c</fullName>
        <label>Operating DH Pressure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Operator__c</fullName>
        <label>Operator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Other_Services_Operator__c</fullName>
        <label>Other Services Operator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Overload_Setting__c</fullName>
        <label>Overload Setting</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pass_Fail__c</fullName>
        <label>Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Perf_Open_Hold_Interval__c</fullName>
        <label>Perf/Open Hold Interval</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Ground_A_Loaded__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Ground A (Loaded)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Ground_A_No_Load__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Ground A (No Load)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Ground_B_Loaded__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Ground B (Loaded)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Ground_B_No_Load__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Ground B (No Load)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Ground_C_Loaded__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Ground C (Loaded)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Ground_C_No_Load__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Ground C (No Load)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Phase_A_Loaded__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Phase A (Loaded)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Phase_A_No_Load__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Phase A (No Load)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Phase_B_Loaded__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Phase B (Loaded)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Phase_B_No_Load__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Phase B (No Load)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Phase_C_Loaded__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Phase C (Loaded)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phase_to_Phase_C_No_Load__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Phase to Phase C (No Load)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phased_Out__c</fullName>
        <label>Phased Out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pole_XFMR_KVA__c</fullName>
        <label>Pole XFMR KVA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Power_Cable_A_B__c</fullName>
        <label>Power Cable A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Power_Cable_A_C__c</fullName>
        <label>Power Cable A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Power_Cable_A_GRND__c</fullName>
        <label>Power Cable A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Power_Cable_B_C__c</fullName>
        <label>Power Cable B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Power_Cable_B_GRND__c</fullName>
        <label>Power Cable B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Power_Cable_C_GRND__c</fullName>
        <label>Power Cable C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Primary_Lightning_Arrestor__c</fullName>
        <label>Primary Lightning Arrestor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Primary_Voltage__c</fullName>
        <label>Primary Voltage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Producing_PSI__c</fullName>
        <label>Producing PSI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Producing_Temp_1__c</fullName>
        <label>Producing Temp (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Producing_Temp_2__c</fullName>
        <label>Producing Temp (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pull_Reason__c</fullName>
        <label>Pull Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Convert to Gas Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convert to Injection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convert to Rods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion – Hole In Tubing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion – Motor Shroud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt - Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt – Lower Pigtail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt – Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt – Motor Lead Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt - Pothead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt – Surface Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Burnt - Switchboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Current Unbalanced - Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Current Unbalanced - Motor Lead Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Feed Thru Mandrel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Idle Amps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical – Wet Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Well Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Upsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure Cause Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Material – Paraffin – Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Damage - Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Damage - Feed Thru Mandrel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Damage - Motor Lead Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Damage - Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Damage - Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Excessive Wear - Pump</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pulled_Date__c</fullName>
        <label>Pulled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_1_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump (1) Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_1_Foreign_Material__c</fullName>
        <label>Pump (1) Foreign Material</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_1_Int__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump (1) Int</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_2_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump (2) Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_2_Foreign_Material__c</fullName>
        <label>Pump (2) Foreign Material</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_2_Int__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump (2) Int</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_3_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump (3) Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_3_Foreign_Material__c</fullName>
        <label>Pump (3) Foreign Material</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_3_Int__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump (3) Int</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Model__c</fullName>
        <label>Pump Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Serial_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pump #1</inlineHelpText>
        <label>Pump Serial # (1)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Pump Serial # (1))</relationshipLabel>
        <relationshipName>Equipment_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Serial_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pump Serial # (2)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Pump Serial # (2))</relationshipLabel>
        <relationshipName>Equipment_Data2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Serial_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pump Serial # (3)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Pump Serial # (3))</relationshipLabel>
        <relationshipName>Equipment_Data3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Stages__c</fullName>
        <label>Pump Stages</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Type__c</fullName>
        <label>Pump Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Up_Time_min__c</fullName>
        <inlineHelpText>In Minutes</inlineHelpText>
        <label>Pump-Up Time (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pumped_Off__c</fullName>
        <label>Pumped Off</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>